2005-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* DataView.cs : missing attributes.

2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DataRowView.cs : implemented CreateChildView().

2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DataTable.cs, DataView.cs :
	  Optimized DataView to compile only once RowFilter and Sort when 
	  those properties are set. To make it possible, extracted 
	  SortableColumn out of DataTable and added internal DataTable.Select()
	  that accepts precompiled IExpression and SortableColumns[].

2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DataColumn.cs : set_MaxLength is not allowed when it is mapped to
	  SimpleContent. (However, it is weird but it never fails when we set
	  ColumnMapping = MappingType.SimpleContent when we fhave MaxLength.)

2005-01-21  Atsushi Enomoto  <atsushi@ximian.com>

	* DataRow.cs : more Current -> Default fixes. Check if it should throw
	  VersionNotFoundException. Patch by Ankit Jain.

2005-01-21  Atsushi Enomoto  <atsushi@ximian.com>

	* DataRow.cs : Default selects the right version for the current
	  state of the row. Current is not always available. Also change
	  that for GetParentRow(). Patch by Ankit Jain.

2005-01-21  Atsushi Enomoto  <atsushi@ximian.com>

	* DataTable.cs : CopyColumn() should copy AutoIncrement after
	  DefaultValue, or it will raise an error in some cases.

2005-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ConstraintCollection.cs : Add() should throw ArgumentException when
	  the argument constraint fails validation.
	  DataTable.cs : set_PrimaryKey should throw ArgumentException when
	  the argument contains constraints which fail validation.

2005-01-19  Sureshkumar T  <tsureshkumar@novell.com>

	* DataRelationCollection.cs: 

	Method Remove : Donot throw exception if DataRelation argument is
	null in DataRelationCollection.Remove method.

	Method RemoveAt : Exception should be IndexOutOfRangeException if
	row index is not in list range.
